FIX forms: more accessible (but less beautiful)
Borders in old.html were too light, and on some screens they were not
visible. This changes will make them stronger, and also make input in
new.html behave consistently

--- a/server/static/css/pure-skin-porpora.css
+++ b/server/static/css/pure-skin-porpora.css
@@ -341,9 +341,9 @@ Forms Core
 .pure-skin-porpora .pure-form textarea {
     padding: 0.5em 0.6em;
     display: inline-block;
-    border: 1px solid #dedede;
+    border: 1px solid #666666;
     font-size: 0.8em;
-    box-shadow: inset 0 1px 3px #dedede;
+    box-shadow: inset 0 1px 3px #666666;
     border-radius: 10px;
     -webkit-transition: 0.3s linear border;
     -moz-transition: 0.3s linear border;
